Fixes in cache handling